# mojom-language-support

./: .gitignore  Cargo.toml  README.md
chromium-mojom-check/: Cargo.toml
chromium-mojom-check/src/: main.rs
mojom-lsp/: Cargo.toml  README.md
mojom-lsp-server/: Cargo.toml  README.md
mojom-lsp-server/src/: definition.rs  imported_files.rs  protocol.rs  semantic.rs  server.rs
mojom-lsp-vscode/: README.md  package-lock.json  package.json  tsconfig.json
mojom-lsp-vscode/client/: package-lock.json  package.json
mojom-lsp-vscode/syntaxes/: mojom.tmLanguage.json
mojom-lsp/src/: lib.rs
mojom-lsp/src/server/: definition.rs  diagnostic.rs  imported_files.rs  initialization.rs  mod.rs  mojomast.rs  semantic.rs  server.rs
mojom-lsp/src/syntax/: mod.rs  mojom.pest  parser.rs  syntax.rs  traverse.rs  typespec.rs
mojom-syntax/: Cargo.toml
mojom-syntax/src/: parser.rs
parser/: Cargo.toml
parser/src/: ast.rs  definition.rs  identifier.rs  interface.rs  lib.rs  mojom.pest  mojom.rs  parser.rs  visitor.rs
server/: Cargo.toml  README.md
server/src/: definition.rs  diagnostic.rs  import.rs  imported_files.rs  initialization.rs  lib.rs  main.rs  messagesender.rs  mojomast.rs  protocol.rs  semantic.rs  server.rs
syntax/: Cargo.toml
syntax/src/: lib.rs  mojom.pest  parser.rs  syntax.rs  traverse.rs  typespec.rs  visitor.rs
testdata/: my_interface.mojom  my_service.mojom
testdata/foo_module/: foo.mojom
vscode-mojom/: .gitignore  README.md  package-lock.json  package.json
vscode-mojom-idl/: README.md  package-lock.json  package.json
(+8 files in other folders)
