[package]
name = "mojom-lsp"
version = "0.1.0"
authors = ["The Chromium Authors"]
edition = "2018"
description = "A language server for Mojom IDL"
license = "Apache-2.0"
repository = "https://github.com/GoogleChromeLabs/mojom-language-support"

[[bin]]
name = "mojom-lsp-server"

[dependencies]
anyhow = "1.0.26"
env_logger = { version = "0.7.1", default-features = false }
glob = "0.3"
log = "0.4.8"
lsp-types = "0.71"
pest = "2.0"
pest_derive = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pipe = "0.2"
